1) Add caching with local storage of budget data 2) Fix bug with overlapping divs 3) Chage tableView to display year data

--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -1,14 +1,19 @@
+#yearspan {
+	position:absolute;
+}
+
 #vis-contents > div.active {
 	opacity:1;
-	top:0;
+	z-index: 10;
 }
 
 #vis-contents > div{
-	width:100%;
-	height:100%;
+	width:70%;
+	height:80%;
+	top:50px;
 	opacity:0;
+	z-index: -10;
 	position:absolute;
-	float: top;
 	transition-property: right, opacity;
   	transition-duration: 1s;
 	-moz-transition-property: right, opacity;
@@ -19,7 +24,8 @@
 
 #vis-buttons {
 	position:absolute;
-	top:90%;
+	z-index: 50;
+	top:80%;
 	height:38px;
 	width:80%;
 	background-color:#ddd;
@@ -27,7 +33,7 @@
 
 #embed-widget{
 	position:absolute;
-	top:100%;
+	top:89%;
 	height:38px;
 	width:80%;
 }
